--- a/product1.html
+++ b/product1.html
@@ -13,7 +13,7 @@
     <div class="cursor-inner">★</div>
   </div>
   <header>
-    <h2 class="title"><a href="top.html">Ykeyb</a></h2>
+    <h2 class="title"><a href="index.html">Ykeyb</a></h2>
     <ul class="nav-menu">
       <li><a href="products.html">製品一覧</a></li>
       <li><a href="form.html">お問い合わせ</a></li>
