--- a/top.html
+++ b/top.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ykeyb</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/top.css">
+  <link rel="stylesheet" href="css/style-top.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="/favicon.ico">
 </head>
@@ -13,7 +13,7 @@
     <div class="cursor-inner">★</div>
   </div>
   <header>
-    <h2 class="title"><a href="top.html">Ykeyb</a></h2>
+    <h2 class="title"><a href="index.html">Ykeyb</a></h2>
     <ul class="nav-menu">
       <li><a href="products.html">製品一覧</a></li>
       <li><a href="form.html">お問い合わせ</a></li>
